# voxelserver

./: .gitignore  CMakeLists.txt  README.md  build.bat  run-RelWithDebInfo.bat
grabber/: grab-lidar.js  package.json  typings.json
grabber/src/: bdmr.js  grab-lidar.js
include/Eigen/src/Core/arch/SSE/: PacketMath.h
include/b64/: encode.h
src/: voxelserver.cpp
www/: .gitignore  MCExplorer.swf  index.html
www/dashboard/: dashboard.html
www/dashboard/js/: main.js
www/debug/: debug.html
www/debug/js/: main.js
www/gkot/boxd/: boxDebug.html
www/gkot/boxd/js/: main.js
www/gkot/dashboard/: dashboard.html
www/gkot/dashboard/js/: main.js
